--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ button, button:focus {
     font-family: "Baloo Thambi 2", cursive;
 }
 
-.font-rale {
+.font-rubik {
     font-family: "Raleway", cursive;
 }
 
